k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bugtracker-service
  labels:
    app: bugtracker
spec:
  type: LoadBalancer
  selector:
    app: bugtracker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
